assets/styles/main.css
/* ... */
#offline-message {
    background-color: #E74646;
    bottom: 0;
    color: #d1d1d1;
    font-weight: bold;
    height: 50px;
    left: 0;
    padding-top: 0;
    position: fixed;
    right: 0;
    text-align: center;
    z-index: 150;
}

#offline-message span {
    width: 100%;
}

.unbreakable {
    white-space: nowrap;
}

@keyframes indeterminate {
    0% {
        left: -35%;
        right: 100%;
    }
    60% {
        left: 100%;
        right: -90%;
    }
    100% {
        left: 100%;
        right: -90%;
    }
}

.box h1 {
    font-size: 28px;
    margin: 0;
    padding: 30px 20px 40px 20px;
    position: relative;
    text-align: center;
    word-break: normal;
}

.box .logo {
    background-image: url('../img/logo.svg');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 39px;
    border-radius: 50%;
    bottom: -37px;
    height: 75px;
    left: 0;
    margin: 0 auto;
    position: absolute;
    right: 0;
    width: 75px;
    z-index: 5;
}

.error .box .logo {
    background-image: url('../img/error.png');
    background-size: 57px;
}

.box h2.header {
    padding: 0 0 30px 0;
    text-align: center;
}

.box .submit {
    padding: 15px 0;
}

.box .body {
    padding: 30px 50px 50px;
    max-width: 500px;
    margin: auto;
}

.error .box .body {
    padding-top: 50px;
}

.header-profile {
    cursor: pointer;
    flex: 0 0 auto;
    height: 50px;
    margin-bottom: auto;
    margin-right: 10px;
    margin-top: auto;
}

.header-profile .user-avatar {
    border-radius: 50%;
    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .302), 0 1px 3px 1px rgba(60, 64, 67, .149);
    height: 50px;
    width: 50px;
}

.header-profile .fa-chevron-down::before {
    bottom: 57px;
    color: #fff;
    left: 25px;
    position: relative;
}

.header-profile .fa-chevron-down {
    font-size: 13px;
}

.header-profile .down-background {
    background-color: #009688;
    border-radius: 50%;
    bottom: 38px;
    display: block;
    height: 21px;
    left: 40px;
    position: relative;
    width: 21px;
}

.user-avatar.circle {
    background-color: #E8EAF6;
    color: #555;
    display: block;
    font-size: 33px;
    padding-top: 5px;
}

/* Nav animations */

.sidebar-wrapper {
    transform: translate3d(0, 0, 0);
    transition: width 0.3s, right 0.3s;
}

.collapsed .sidebar-wrapper {
    transform: translate3d(0, 0, 0);
    transition: width 0.3s, left 0.3s;
}

.content-wrapper {
    transform: translate3d(0, 0, 0);
    transition: width 0.3s, right 0.3s;
}

.collapsed .content-wrapper {
    transform: translate3d(0, 0, 0);
    transition: width 0.3s, left 0.3s;
}

.burger-menu {
    display: none;
}

.burger-menu i {
    color: #7f8c8d;
    cursor: pointer;
    font-size: 21px;
}

.content-wrapper .btn-holder input[type="text"], .content-wrapper .btn-holder input[type="text"]:focus:not([readonly]) {
    border: none;
    box-shadow: inherit;
    height: 42px;
}

/* NAV SIZE AREA, KEEP ORDER */
.collapsed .sidebar-wrapper {
    width: 60px;
}

.collapsed {
    margin-left: 60px !important;
}

.header-profile .dropdown-menu {
    right: 18px;
    top: 35px;
}

.dropdown-menu {
    position: absolute;
    text-align: left;
    z-index: 1;
    overflow: hidden;
    border: 1px solid #e0e0e0;
    border-radius: 2px;
    margin-top: 20px;
}

.dropdown-menu i {
    display: inline-block;
    margin-right: 10px;
    width: 16px;
}

.dropdown-menu li {
    background-color: #fff;
    border-bottom: 1px solid #e0e0e0;
    line-height: 1.5rem;
    margin: 0;
}

.dropdown-menu a {
    display: block;
    padding: 15px 35px 10px 20px;
}

.dropdown-menu span {
    left: 5px;
    position: relative;
    top: -3px;
}


@media (max-width: 749px) {
    .btn-holder .button, .visibility {
        padding-top: 5px;
    }

    .item-wrapper .data {
        max-width: 90%;
    }

    .item-image-container, .tag-image-container {
        float: none;
        margin-bottom: 20px;
        width: 100%;
    }

    .expanded {
        margin-left: -25px;
    }

    .burger-menu {
        display: block;
        margin: auto 15px;
        padding-top: 3px;
    }

    .sidebar-wrapper {
        width: 0 !important;
    }

    body {
        margin-left: 0 !important;
    }

    .header-profile {
        display: none !important;
    }

    .show-on-mobile {
        display: block;
    }

    .related-items {
        margin-top: 30px;
    }

    .title-block {
        flex-direction: column;
    }

    .content-wrapper .btn-holder {
        flex-direction: column;
    }
}

@media (max-width: 600px) {
    .data-holder .input-field.datum-input-field {
        margin: 0 10px;
    }
}

.image-preview-wrapper.image-field {
    height: 130px;
}

.mobile-overlay {
    background-color: rgba(0, 0, 0, 0.3);
    display: none;
    height: 100%;
    position: fixed;
    width: 100%;
    z-index: 500;
}

.mobile-opened .sidebar-wrapper {
    width: 230px !important;
}

.mobile-opened .mobile-overlay {
    display: block;
}

/* END NAV AREA */

::placeholder {
    color: #9e9e9e;
    opacity: 1;
}

:-ms-input-placeholder {
    color: #9e9e9e;
}

::-ms-input-placeholder {
    color: #9e9e9e;
}

.spacer {
    padding-top: 40px;
}

.scrollable {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-between;
    overflow-x: auto;
}

.nav-wrapper #search_term {
    align-items: center;
    background-color: #fff;
    border: none;
    border-radius: 25px;
    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
    margin: 10px;
    max-width: 210px;
    padding: 0 15px 0 15px;
    width: auto;
    height: 50px;
}
/* ... */

